--- a/Lab1/Task2/wine-training-pipeline.ipynb
+++ b/Lab1/Task2/wine-training-pipeline.ipynb
@@ -73,9 +73,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wine_fg = fs.get_feature_group(name=\"wine\", version=1)\n",
+    "wine_fg = fs.get_feature_group(name=\"wine_2\", version=1)\n",
     "query = wine_fg.select_all()\n",
-    "feature_view = fs.get_or_create_feature_view(name=\"wine\",\n",
+    "feature_view = fs.get_or_create_feature_view(name=\"wine_2\",\n",
     "                                  version=1,\n",
     "                                  description=\"Read from Wine Quality dataset\",\n",
     "                                  labels=[\"quality\"],\n",
@@ -94,17 +94,33 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UserWarning: Could not establish connection to ArrowFlight Server. (Flight returned timeout error, with message: Deadline Exceeded) Will fall back to hive/spark for this session. If the error persists, you can disable using ArrowFlight by changing the cluster configuration (set 'enable_flyingduck'='false').\n",
+      "DeprecationWarning: ssl.PROTOCOL_TLS is deprecated\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using ArrowFlight (1.42s) \n"
+      "Finished: Reading data from Hopsworks, using Hive (3.09s) \n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "VersionWarning: Incremented version to `3`.\n"
+      "VersionWarning: Incremented version to `5`.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "length of x X_train: (4264, 12)\n",
+      "length of x X_test: (1066, 12)\n"
      ]
     },
     {
@@ -124,6 +140,8 @@
    "source": [
     "# You can read training data, randomly split into train/test sets of features (X) and labels (y)        \n",
     "X_train, X_test, y_train, y_test = feature_view.train_test_split(0.2)\n",
+    "print(\"length of x X_train:\",X_train.shape)\n",
+    "print(\"length of x X_test:\",X_test.shape)\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "# Train our model with the Scikit-learn K-nearest-neighbors algorithm using our features (X_train) and labels (y_train)\n",
     "model = LogisticRegression(random_state = 0, penalty = 'l2',max_iter=15000 )\n",
@@ -636,12 +654,12 @@
     "mr = project.get_model_registry()\n",
     "\n",
     "# The contents of the 'iris_model' directory will be saved to the model registry. Create the dir, first.\n",
-    "model_dir=\"wine_model\"\n",
+    "model_dir=\"wine_model_2\"\n",
     "if os.path.isdir(model_dir) == False:\n",
     "    os.mkdir(model_dir)\n",
     "\n",
     "# Save both our model and the confusion matrix to 'model_dir', whose contents will be uploaded to the model registry\n",
-    "joblib.dump(model, model_dir + \"/wine_model.pkl\")\n",
+    "joblib.dump(model, model_dir + \"/wine_model_2.pkl\")\n",
     "# fig.savefig(model_dir + \"/confusion_matrix.png\")    \n",
     "\n",
     "# Specify the schema of the model's input/output using the features (X_train) and labels (y_train)\n",
@@ -650,7 +668,7 @@
     "model_schema = ModelSchema(input_schema, output_schema)\n",
     "# Ensure that the metrics are single numerical values\n",
     "wine_model = mr.python.create_model(\n",
-    "    name=\"wine_model\", \n",
+    "    name=\"wine_model_2\", \n",
     "    metrics={\n",
     "        \"accuracy\": model_results['Accuracy'].iloc[0],\n",
     "        \"Precision\": model_results['Precision'].iloc[0],\n",
